--- a/css/footer.css
+++ b/css/footer.css
@@ -39,7 +39,7 @@ footer .container.main-footer {
 .footer-column h5 {
     font-size: 16px;
     margin-bottom: 10px;
-    color: #ffb347;
+    color: #AF8D5F;
 }
 
 .footer-column ul {
@@ -95,7 +95,7 @@ footer .copyrights a {
 }
 
 footer .copyrights a:hover {
-    color: #ffb347; /* Hoverda renk değişimi */
+    color: #AF8D5F; /* Hoverda renk değişimi */
 }
 
 /* === Responsive === */
