--- a/css/header.css
+++ b/css/header.css
@@ -14,7 +14,8 @@ body {
 
 /* ==================== HEADER ==================== */
 .main-header {
-    background-color: #fff;
+    color: black;
+    background-color:#f5f5f5;
     border-bottom: 1px solid #ddd;
     position: sticky;
     top: 0;
@@ -35,18 +36,28 @@ body {
 
 /* ==================== LOGO ==================== */
 .logo img {
-    height: 100px; 
-    width: 100px;  
-    object-fit: cover; 
-    border-radius: 50%; /* Tam daire yapar */
-    border: 2px solid #333; 
-    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1); 
-    transition: transform 0.3s ease; 
+    height: 100px;
+    width: 100px;
+    object-fit: cover;
+
+    border-radius: 12px;
+    border: 1px solid rgba(212, 175, 55, 0.4);
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.08);
+    transition: all 0.3s ease;
 }
 
 .logo img:hover {
-    transform: scale(1.05);
+    transform: scale(1.03);
+    border-color: rgba(212, 175, 55, 0.8);
+
+    /* Altın tonlu dış parıltı efekti */
+    box-shadow:
+        0 0 8px rgba(212, 175, 55, 0.4),
+        0 4px 14px rgba(0, 0, 0, 0.1);
 }
+
+
+
 
 /* ==================== HESAP MENÜSÜ ==================== */
 .hesap-menu {
@@ -89,7 +100,7 @@ body {
 }
 
 .menu li a:hover {
-    color: black;
+    color: #AF8D5F;
 }
 
   
@@ -115,7 +126,7 @@ body {
 
 .submenu li a:hover {
     background: #f5f5f5;
-    color: black;
+    color: #AF8D5F;
 }
 
 .dropdown:hover .submenu {
