--- a/css/user.css
+++ b/css/user.css
@@ -47,9 +47,11 @@
 #loginForm button {
     padding: 10px;
     font-size: 16px;
-    background-color: black;
-    color: white;
+    background-color: #AF8D5F;
+    color: #f5f5f5;
     font-weight: bold;
     border: none;
     cursor: pointer;
 }
+
+
