--- a/css/user.css
+++ b/css/user.css
@@ -56,7 +56,7 @@
     cursor: pointer;
 }
 
-/* ARAMA */
+/*                      ARAMA                                        */
 .search-overlay {
     background-color: #f5f5f5; /* header ile aynı renk */
     color: black;
@@ -137,18 +137,19 @@
   }
   
   /* Ürün adı */
-  .product-card h3 {
+  .product-card h4 {
     font-size: 14px;
     margin: 10px 0 5px;
-    color: #222;
+    color: #AF8D5F;
   }
   
   /* Fiyat */
   .product-card p {
     font-weight: bold;
-    color: #444;
+    color: #AF8D5F;
     margin: 0;
     font-size: 14px;
   }
+  
   
 
