--- a/css/products.css
+++ b/css/products.css
@@ -43,6 +43,10 @@
   color: #888;
   margin-bottom: 10px;
 }
+.product-card a {
+  text-decoration: none;
+  color: inherit;
+}
   /*Buton*/
  .add-to-cart {
   background-color:#ffffff;
